# bandcamp-dl

./: Cargo.toml
src/: cli.rs  cookies.rs  file.rs  http.rs  main.rs  spin_me.rs
src/api/: mod.rs  types.rs
