[package]
name = "bandcamp-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["cargo", "derive"] }
dlcommon = { git = "https://github.com/edwardgeorge/dlcommon-rs.git" }
indicatif = "0.17.8"
log = "0.4.22"
reqwest = { version = "0.12.5", features = [
    "cookies",
    "gzip",
    "json",
    "stream",
] }
sanitize-filename = "0.5.0"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.124"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
